# wireguard-tui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh  minisign.pub
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: DISTROS.md  RELEASES.md  TUTORIAL.md  help.md
packaging/: 49-wireguard-tui.rules  PACKAGING.md  wg-helper  wireguard-tui.desktop
packaging/apk/: APKBUILD
packaging/aur/: PKGBUILD
packaging/rpm/: wireguard-tui.spec
packaging/void/: template
src/: backend.rs  clipboard.rs  config.rs  create.rs  doctor.rs  main.rs  secrets.rs  update.rs  validation.rs
src/ui/: helpers.rs  mod.rs
tests/: helper-validation.sh  installer-sanity.sh
