[package]
name = "wireguard-tui"
version = "1.6.0"
edition = "2024"
description = "A native Linux terminal UI for managing plain WireGuard tunnels with wg and wg-quick."
license = "MIT"
repository = "https://github.com/JamilleJung/wireguard-tui"
readme = "README.md"
default-run = "wg-tui"

[[bin]]
name = "wg-tui"
path = "src/main.rs"

[[bin]]
name = "wg-helper"
path = "src/bin/wg-helper.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
libc = "0.2"
zip = { version = "4", default-features = false, features = ["deflate"] }
qrcode = { version = "0.14", default-features = false }
rqrr = "0.10"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1

# `cargo deb` packaging — installs to /usr and uses the polkit rule for auth.
[package.metadata.deb]
maintainer = "jamillejung <izeystudio@gmail.com>"
copyright = "2026 wireguard-tui contributors"
license-file = ["LICENSE", "0"]
section = "net"
priority = "optional"
extended-description = "A native Linux terminal UI for managing plain WireGuard tunnels through wg and wg-quick: tunnel list, live status, activate/deactivate, import, editing, key generation, QR display, and a small privileged helper."
depends = "$auto, wireguard-tools, polkit-1 | policykit-1"
assets = [
    ["target/release/wg-tui", "usr/bin/", "755"],
    ["target/release/wg-helper", "usr/lib/wireguard-tui/wg-helper", "755"],
    ["packaging/49-wireguard-tui.rules", "etc/polkit-1/rules.d/", "644"],
    ["README.md", "usr/share/doc/wireguard-tui/README.md", "644"],
]
