[package]
name = "wireguard-tui"
version = "1.8.0"
edition = "2024"
description = "A native Linux terminal UI for managing plain WireGuard tunnels with wg and wg-quick."
license = "MIT"
repository = "https://github.com/JamilleJung/wireguard-tui"
readme = "README.md"
default-run = "wg-tui"

[[bin]]
name = "wg-tui"
path = "src/main.rs"

[[bin]]
name = "wg-helper"
path = "src/bin/wg-helper.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
libc = "0.2"
zip = { version = "8", default-features = false, features = ["deflate-flate2"] }
qrcode = { version = "0.14", default-features = false }
rqrr = "0.10"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"

# `cargo deb` packaging — installs to /usr and uses the polkit rule for auth.
[package.metadata.deb]
maintainer = "jamillejung <izeystudio@gmail.com>"
copyright = "2026 wireguard-tui contributors"
license-file = ["LICENSE", "0"]
section = "net"
priority = "optional"
extended-description = "A native Linux terminal UI for managing plain WireGuard tunnels through wg and wg-quick: tunnel list, live status, activate/deactivate, import, editing, key generation, QR display, and a small privileged helper."
depends = "$auto, wireguard-tools, pkexec | polkit-1 | policykit-1"
recommends = "wl-clipboard | xclip | xsel"
assets = [
    ["target/release/wg-tui", "usr/bin/", "755"],
    ["target/release/wg-helper", "usr/lib/wireguard-tui/wg-helper", "755"],
    ["packaging/49-wireguard-tui.rules", "etc/polkit-1/rules.d/", "644"],
    ["packaging/wireguard-tui.desktop", "usr/share/applications/", "644"],
    ["packaging/wireguard-tui.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
    ["README.md", "usr/share/doc/wireguard-tui/README.md", "644"],
]
